	-added/improved a few rules
	-fixed some false alarms
	-fixed incorrect suggestions thanks to added tests on corrections

-English:
	-added/improved a few rules
	-fixed some false alarms

-French:
	-added/improved several rules
	-fixed some false alarms

-Polish:
	-added/improved several rules
	-fixed some false alarms

-Portuguese:
	-added/improved a few rules
	-it now has 3400+ compound words

-for languages with many rules (like French or German) performance
 on long texts has been increased by about 20-30%

-fix for thread-safety (could cause hang in MultiWordChunker)

-fixed a bug where chunk annotations were not tested in <and> groups

-fixed a bug in the unification mechanism that discarded some of the matching
 interpretations prematurely

-added support for chunk annotations in the disambiguator, and fixed one bug
 in filtering tokens with chunk annotations

-new command line tools to export and create binary dictionaries:
	org.languagetool.dev.DictionaryExporter
	org.languagetool.dev.POSDictionaryBuilder

-LibreOffice/OpenOffice integration:
	-added a workaround for incorrect sentence detection for the case that a
		footnote appeared after a sentence full stop (Sourceforge bug #191) 

-API:
	-SentenceTokenizer is now an interface, the implementation has been moved to
		RegexSentenceTokenizer, but this is deprecated and SRXSentenceTokenizer
		should be used instead
	-Some methods from org.languagetool.tools.StringTools have been moved to
	 the org.languagetool.gui.Tools class in the languagetool-gui-commons project
	-LanguageToolListener.languageToolEventOccured() has been renamed to
	 LanguageToolListener.languageToolEventOccurred()
	-org.languagetool.tools.SymbolLocator isn't public anymore (shouldn't affect anybody)
	-removed DanishSentenceTokenizer which had been deprecated for three years

-languagetool-wikipedia: the command line options for checking a Wikipedia dump
	have been simplified. The command can now be called like this: