@@ -58,10 +58,17 @@
         <dependencySet>
             <unpack>false</unpack>
             <outputDirectory>/</outputDirectory>
+            <outputFileNameMapping>languagetool.jar</outputFileNameMapping>
+            <includes>
+                <include>org.languagetool:languagetool-standalone</include>
+            </includes>
+        </dependencySet>
+        <dependencySet>
+            <unpack>false</unpack>
+            <outputDirectory>/</outputDirectory>
             <outputFileNameMapping>${artifact.artifactId}${dashClassifier?}.${artifact.extension}</outputFileNameMapping>
             <includes>
                 <include>org.languagetool:languagetool-commandline</include>
-                <include>org.languagetool:languagetool-standalone</include>
                 <include>org.languagetool:languagetool-server</include>
             </includes>
         </dependencySet>
