@@ -26,6 +26,10 @@ LanguageTool Change Log
 	-added/improved a few rules
 	-it now has 3400+ compound words
 
+-the JAR file has been renamed to languagetool.jar, from formerly
+ languagetool-standalone.jar to avoid confusion about what 'standalone'
+ means in this context (github issue #29)
+
 -for languages with many rules (like French or German) performance
  on long texts has been increased by about 20-30%
 
